<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginHorizontal="5dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/background_dialog"
    android:backgroundTint="@color/teal_darkest"
    android:backgroundTintMode="src_over"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCreateEventTopInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:gravity="center"
        android:text="@string/create_event_top_info"
        android:textColor="@color/teal_darker"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCreateEventTimePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/text_dark"
            android:fontFamily="@font/josefinsans_regular"
            android:gravity="center"
            android:text="@string/create_event_time_input_prompt"
            android:textColor="@color/teal_darker"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTimeCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_rounded_fill"
            android:backgroundTint="@color/text_dark"
            android:ems="10"
            android:fontFamily="@font/josefinsans_semibold"
            android:gravity="center"
            android:hint="@string/hint_create_event_time"
            android:inputType="time"
            android:maxLength="5"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/background_teal"
            android:textColorHint="@color/teal_darkest"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCreateEventTitlePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/josefinsans_regular"
            android:gravity="center"
            android:text="@string/create_event_title_input_prompt"
            android:textColor="@color/teal_darker"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextCreateEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_rounded_fill"
            android:backgroundTint="@color/text_dark"
            android:ems="10"
            android:fontFamily="@font/josefinsans_semibold"
            android:gravity="center"
            android:hint="@string/hint_create_event_title"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/background_teal"
            android:textColorHint="@color/teal_darkest"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCreateEventDescriptionPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:gravity="center"
        android:text="@string/create_event_description_input_prompt"
        android:textColor="@color/teal_darker"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCreateEventContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_rounded_fill"
        android:backgroundTint="@color/text_dark"
        android:ems="10"
        android:fontFamily="@font/josefinsans_regular"
        android:gravity="left"
        android:hint="@string/hint_create_event_desc"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="3sp"
        android:maxHeight="300dp"
        android:minLines="5"
        android:padding="10dp"
        android:textColor="@color/background_teal"
        android:textColorHint="@color/teal_darkest"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/background_rounded_fill"
        android:backgroundTint="@color/text_dark"
        android:fontFamily="@font/josefinsans_bold"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:text="@string/create_event_button_create"
        android:textColor="@color/background_teal"
        android:textSize="18sp" />
</LinearLayout>