<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutEventViewMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/background_rounded_fill"
    android:backgroundTint="@color/teal_darkest"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_corner"
            android:backgroundTint="@color/text_dark"
            android:orientation="vertical"
            android:paddingEnd="4dp"
            android:paddingBottom="3dp">

            <TextView
                android:id="@+id/textViewEventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center_horizontal"
                android:minWidth="85dp"
                android:minHeight="30dp"
                android:text="@string/placeholder_time24h"
                android:textColor="@color/teal_darker"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewEventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/josefinsans_semibold"
                android:gravity="center_horizontal"
                android:text="@string/placeholder_date"
                android:textColor="@color/teal_darker" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/josefinsans_semibold"
            android:maxLength="55"
            android:singleLine="false"
            android:text="@string/placeholder_title"
            android:textColor="@color/teal_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/josefinsans_regular"
        android:lineSpacingExtra="2sp"
        android:text="@string/placeholder_description"
        android:textColor="@color/teal_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewEventCreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/josefinsans_italic"
        android:gravity="end"
        android:text="@string/placeholder_name"
        android:textColor="@color/teal_darker"
        android:textSize="15sp" />
</LinearLayout>