<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userSettingsBaseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.UserSettingsActivity">

    <LinearLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar"
        android:backgroundTint="@color/text_dark"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0"
            android:background="@color/transparent"
            app:srcCompat="@drawable/arrow_back30px"
            app:tint="@color/teal_light" />

        <TextView
            android:id="@+id/textViewToolbarAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/josefinsans_bolditalic"
            android:text="@string/app_name"
            android:textColor="@color/teal_light"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewToolbarSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="6dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:fontFamily="@font/josefinsans_semibolditalic"
            android:gravity="center|center_vertical"
            android:text="@string/settings"
            android:textColor="@color/teal_light"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_rounded_fill"
        android:backgroundTint="@color/teal_dark"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="7dp"
                android:fontFamily="@font/josefinsans_semibold"
                android:text="@string/user_settings"
                android:textColor="@color/text_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewUserSettingsUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/josefinsans_mediumitalic"
                android:text="TextView"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewUserSettingsEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/josefinsans_mediumitalic"
                android:text="TextView"
                android:textColor="@color/text_grey" />

            <View
                android:id="@+id/viewDividerUserSettings1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/josefinsans_medium"
                android:text="@string/your_groups"
                android:textColor="@color/text_dark"
                android:textSize="16sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayoutGroupLeaveRemoveHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></LinearLayout>
            </ScrollView>

            <View
                android:id="@+id/viewDividerUserSettings2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/josefinsans_medium"
                android:text="@string/app_settings"
                android:textColor="@color/text_dark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonSettingsResetApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_rounded_fill"
                android:backgroundTint="@color/background_teal"
                android:fontFamily="@font/josefinsans_medium"
                android:paddingHorizontal="20dp"
                android:text="@string/reset_app"
                android:textColor="@color/text_dark" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/josefinsans_italic"
                android:text="@string/reset_app_info"
                android:textColor="@color/text_grey" />

            <View
                android:id="@+id/viewDividerUserSettings3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/josefinsans_medium"
                android:text="@string/account"
                android:textColor="@color/text_dark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonSettingsLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_rounded_fill"
                android:backgroundTint="@color/background_teal"
                android:fontFamily="@font/josefinsans_medium"
                android:paddingHorizontal="20dp"
                android:text="@string/logout"
                android:textColor="@color/text_dark" />

            <Button
                android:id="@+id/buttonSettingsChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_rounded_fill"
                android:backgroundTint="@color/background_teal"
                android:fontFamily="@font/josefinsans_medium"
                android:paddingHorizontal="20dp"
                android:text="@string/change_password"
                android:textColor="@color/text_dark" />

            <View
                android:id="@+id/viewDividerUserSettings4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="7dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/buttonSettingsDeleteAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_rounded_fill"
                android:backgroundTint="@color/text_grey"
                android:fontFamily="@font/josefinsans_medium"
                android:paddingHorizontal="20dp"
                android:text="@string/delete_account"
                android:textColor="@color/error_red" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/josefinsans_italic"
                android:text="@string/delete_account_info"
                android:textColor="@color/text_grey" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>