<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutDialogMessage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="50dp"
    android:background="@drawable/background_rounded_fill"
    android:backgroundTint="@color/teal_darkest"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/josefinsans_regular"
        android:gravity="center_horizontal"
        android:text="@string/message_prompt"
        android:textColor="@color/teal_darker"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/background_rounded_fill"
        android:backgroundTint="@color/text_dark"
        android:ems="10"
        android:fontFamily="@font/josefinsans_regular"
        android:gravity="top"
        android:hint="@string/message_content_hint"
        android:inputType="textMultiLine"
        android:maxHeight="200dp"
        android:minLines="3"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textColor="@color/background_teal"
        android:textColorHint="@color/teal_darkest"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_rounded_fill"
        android:backgroundTint="@color/text_dark"
        android:fontFamily="@font/josefinsans_semibold"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/message_send_button"
        android:textColor="@color/background_teal" />

</LinearLayout>